--- a/tasks/validate_config.yml
+++ b/tasks/validate_config.yml
@@ -12,7 +12,7 @@
 
 - when: changedetection_container_labels_traefik_enabled | bool
   block:
-    - name: Fail if required AnonAddy Traefik settings not defined
+    - name: Fail if required changedetection Traefik settings not defined
       ansible.builtin.fail:
         msg: >-
           You need to define a required configuration setting (`{{ item }}`).
