--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -11,7 +11,9 @@ changedetection_playwright_driver_identifier: "{{ changedetection_identifier}}-p
 changedetection_uid: ''
 changedetection_gid: ''
 
-changedetection_version: '0.48.04'
+# renovate: datasource=docker depName=ghcr.io/dgtlmoon/changedetection
+changedetection_version: 0.48.04
+
 changedetection_playwright_driver_version: latest
 
 # The hostname at which changedetection is served.
