Make the project compliant with REUSE
Note the project has been released under Apache 2.0 (ebd57d6956ab8cf00d86364ac3d7aa9fec4df32a), although I am not really conviced if it was a legitimate move considering the fact that the much of the source code seem to be based on the other role released under AGPL-3.0-or-later.

Signed-off-by: Suguru Hirahara <acioustick@noreply.codeberg.org>

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2023 Niels Bouma
+#
+# SPDX-License-Identifier: Apache-2.0
+
 ---
 
 - block:
@@ -10,7 +14,7 @@
     - setup-all
     - setup-changedetection
     - install-all
-    - install-changedetection    
+    - install-changedetection
 
 - block:
     - when: (not changedetection_playwright_driver_enabled | bool) or (not changedetection_enabled | bool)
