--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2023 Niels Bouma
+#
+# SPDX-License-Identifier: Apache-2.0
+
 ---
 
 # Project source code URL: https://github.com/dgtlmoon/changedetection.io
