--- a/tasks/uninstall.yml
+++ b/tasks/uninstall.yml
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2023 Niels Bouma
+#
+# SPDX-License-Identifier: Apache-2.0
+
 ---
 
 - name: Check existence of Changedetection.io systemd service
