--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -28,6 +28,8 @@ changedetection_gid: ''
 # The hostname at which changedetection is served.
 changedetection_hostname: ''
 
+changedetection_scheme: https
+
 # The path at which changedetection is served.
 # This value must either be `/` or not end with a slash (e.g. `/changedetection`).
 changedetection_path_prefix: /
@@ -132,7 +134,7 @@ changedetection_http_proxy: ''
 changedetection_https_proxy: ''
 changedetection_no_proxy: ''
 
-changedetection_base_url: "https://{{ changedetection_hostname + changedetection_path_prefix | trim('/') }}"
+changedetection_base_url: "{{ changedetection_scheme }}://{{ changedetection_hostname + changedetection_path_prefix | trim('/') }}"
 changedetection_proxy_headers: true
 
 changedetection_hide_referer: false
