--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,4 +1,6 @@
 # SPDX-FileCopyrightText: 2023 Niels Bouma
+# SPDX-FileCopyrightText: 2023 - 2025 Slavi Pantaleev
+# SPDX-FileCopyrightText: 2025 Suguru Hirahara
 #
 # SPDX-License-Identifier: Apache-2.0
 
@@ -65,13 +67,13 @@
     name: "{{ changedetection_container_network }}"
     driver: bridge
 
-- name: Ensure Changedetection.io systemd service installed
+- name: Ensure Changedetection.io systemd service is present
   ansible.builtin.template:
     src: "{{ role_path }}/templates/systemd/changedetection.service.j2"
     dest: "{{ devture_systemd_docker_base_systemd_path }}/{{ changedetection_identifier }}.service"
     mode: 0640
 
-- name: Ensure Changedetection.io playwright-driver systemd service installed
+- name: Ensure Changedetection.io playwright-driver systemd service is present
   when: changedetection_playwright_driver_enabled | bool
   ansible.builtin.template:
     src: "{{ role_path }}/templates/systemd/changedetection-playwright-driver.service.j2"
