Update install.yml: add enable_ipv6 option
Signed-off-by: Suguru Hirahara <acioustick@noreply.codeberg.org>

--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -64,8 +64,10 @@
 
 - name: Ensure Changedetection container network is created
   community.general.docker_network:
+    enable_ipv6: "{{ devture_systemd_docker_base_ipv6_enabled }}"
     name: "{{ changedetection_container_network }}"
     driver: bridge
+    driver_options: "{{ devture_systemd_docker_base_container_networks_driver_options }}"
 
 - name: Ensure Changedetection.io systemd service is present
   ansible.builtin.template:
