--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -206,7 +206,7 @@ changedetection_playwright_driver_ignore_https_errors: false
 changedetection_systemd_required_services_list: "{{ changedetection_systemd_required_services_list_default + changedetection_systemd_required_services_list_auto + changedetection_systemd_required_services_list_custom }}"
 changedetection_systemd_required_services_list_default: |
   {{
-      ['docker.service']
+      ([devture_systemd_docker_base_docker_service_name] if devture_systemd_docker_base_docker_service_name else [])
       +
       ([changedetection_playwright_driver_identifier + '.service'] if changedetection_playwright_driver_enabled else [])
   }}
