Update install.yml: adopt the common format
Reuse https://github.com/mother-of-all-self-hosting/ansible-role-miniflux/blob/cdf7132a2e38f6e411819340b8e13febcc79d8d1/tasks/install.yml

Signed-off-by: Suguru Hirahara <acioustick@noreply.codeberg.org>

--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -17,7 +17,7 @@
     - "{{ changedetection_base_path }}"
     - "{{ changedetection_data_dir_path }}"
 
-- name: Ensure Changedetection.io support files created
+- name: Ensure Changedetection.io support files installed
   ansible.builtin.template:
     src: "{{ role_path }}/templates/{{ item }}.j2"
     dest: "{{ changedetection_base_path }}/{{ item }}"
@@ -28,7 +28,7 @@
     - env
     - labels
 
-- name: Ensure Changedetection.io playwright-driver support files created
+- name: Ensure Changedetection.io playwright-driver support files installed
   when: changedetection_playwright_driver_enabled | bool
   ansible.builtin.template:
     src: "{{ role_path }}/templates/{{ item }}.j2"
