--- a/tasks/uninstall.yml
+++ b/tasks/uninstall.yml
@@ -18,12 +18,12 @@
         enabled: false
         daemon_reload: true
 
-    - name: Ensure Changedetection.io systemd service does not exists
+    - name: Ensure Changedetection.io systemd service does not exist
       ansible.builtin.file:
         path: "{{ devture_systemd_docker_base_systemd_path }}/{{ changedetection_identifier }}.service"
         state: absent
 
-    - name: Ensure Changedetection.io path doesn't exist
+    - name: Ensure Changedetection.io path does not exist
       ansible.builtin.file:
         path: "{{ changedetection_base_path }}"
         state: absent
