--- a/tasks/uninstall_playwright_driver.yml
+++ b/tasks/uninstall_playwright_driver.yml
@@ -18,7 +18,7 @@
         enabled: false
         daemon_reload: true
 
-    - name: Ensure Changedetection.io playwright-driver systemd service does not exists
+    - name: Ensure Changedetection.io playwright-driver systemd service does not exist
       ansible.builtin.file:
         path: "{{ devture_systemd_docker_base_systemd_path }}/{{ changedetection_playwright_driver_identifier }}.service"
         state: absent
