--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,35 +3,34 @@
 # SPDX-License-Identifier: Apache-2.0
 
 ---
-
 - name: Perform Changedetection.io installation tasks
-  block:
-    - name: Validate Changedetection.io configuration
-      when: changedetection_enabled | bool
-      ansible.builtin.include_tasks: "{{ role_path }}/tasks/validate_config.yml"
-
-    - name: Install Changedetection.io
-      when: changedetection_enabled | bool
-      ansible.builtin.include_tasks: "{{ role_path }}/tasks/install.yml"
   tags:
     - setup-all
     - setup-changedetection
     - install-all
     - install-changedetection
+  block:
+    - name: Validate Changedetection.io configuration
+      when: changedetection_enabled | bool
+      ansible.builtin.include_tasks: "{{ role_path }}/tasks/validate_config.yml"
+    - name: Install Changedetection.io
+      when: changedetection_enabled | bool
+      ansible.builtin.include_tasks: "{{ role_path }}/tasks/install.yml"
 
 - name: Perform Changedetection.io playwright-driver uninstallation tasks
-  block:
-    - when: (not changedetection_playwright_driver_enabled | bool) or (not changedetection_enabled | bool)
-      ansible.builtin.include_tasks: "{{ role_path }}/tasks/uninstall_playwright_driver.yml"
   tags:
     - setup-all
     - setup-changedetection
+  block:
+    - name: Uninstall Changedetection.io playwright-driver
+      when: (not changedetection_playwright_driver_enabled | bool) or (not changedetection_enabled | bool)
+      ansible.builtin.include_tasks: "{{ role_path }}/tasks/uninstall_playwright_driver.yml"
 
 - name: Perform Changedetection.io uninstallation tasks
+  tags:
+    - setup-all
+    - setup-changedetection
   block:
     - name: Uninstall Changedetection.io
       when: not changedetection_enabled | bool
       ansible.builtin.include_tasks: "{{ role_path }}/tasks/uninstall.yml"
-  tags:
-    - setup-all
-    - setup-changedetection
