--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,3 +1,4 @@
+---
 galaxy_info:
   author: Niels Bouma
   role_name: changedetection
@@ -16,4 +17,4 @@ galaxy_info:
       versions:
         - "7"
   license: Apache License 2.0
-  min_ansible_version: '2.1'
+  min_ansible_version: "2.1"
