--- a/tasks/uninstall.yml
+++ b/tasks/uninstall.yml
@@ -3,13 +3,13 @@
 # SPDX-License-Identifier: Apache-2.0
 
 ---
-
 - name: Check existence of Changedetection.io systemd service
   ansible.builtin.stat:
     path: "{{ devture_systemd_docker_base_systemd_path }}/{{ changedetection_identifier }}.service"
   register: changedetection_service_stat
 
-- when: changedetection_service_stat.stat.exists | bool
+- name: Uninstall Changedetection.io systemd services and files
+  when: changedetection_service_stat.stat.exists | bool
   block:
     - name: Ensure Changedetection.io systemd service is stopped
       ansible.builtin.service:
