--- a/tasks/uninstall_playwright_driver.yml
+++ b/tasks/uninstall_playwright_driver.yml
@@ -3,13 +3,13 @@
 # SPDX-License-Identifier: Apache-2.0
 
 ---
-
 - name: Check existence of Changedetection.io playwright-driver systemd service
   ansible.builtin.stat:
     path: "{{ devture_systemd_docker_base_systemd_path }}/{{ changedetection_playwright_driver_identifier }}.service"
   register: changedetection_playwright_driver_service_stat
 
-- when: changedetection_playwright_driver_service_stat.stat.exists | bool
+- name: Uninstall Changedetection.io playwright-driver systemd services and files
+  when: changedetection_playwright_driver_service_stat.stat.exists | bool
   block:
     - name: Ensure Changedetection.io playwright-driver systemd service is stopped
       ansible.builtin.service:
