--- a/tasks/validate_config.yml
+++ b/tasks/validate_config.yml
@@ -3,7 +3,6 @@
 # SPDX-License-Identifier: Apache-2.0
 
 ---
-
 - name: Fail if required Changedetection.io settings not defined
   ansible.builtin.fail:
     msg: >-
@@ -14,7 +13,8 @@
     - changedetection_uid
     - changedetection_gid
 
-- when: changedetection_container_labels_traefik_enabled | bool
+- name: Run if Traefik is enabled
+  when: changedetection_container_labels_traefik_enabled | bool
   block:
     - name: Fail if required changedetection Traefik settings not defined
       ansible.builtin.fail:
