--- a/tasks/validate_config.yml
+++ b/tasks/validate_config.yml
@@ -7,7 +7,7 @@
   ansible.builtin.fail:
     msg: >-
       You need to define a required configuration setting (`{{ item }}`).
-  when: "vars[item] == ''"
+  when: "lookup('vars', item, default='') | string | length == 0"
   with_items:
     - changedetection_hostname
     - changedetection_uid
@@ -20,7 +20,7 @@
       ansible.builtin.fail:
         msg: >-
           You need to define a required configuration setting (`{{ item }}`).
-      when: "vars[item] == ''"
+      when: "lookup('vars', item, default='') | string | length == 0"
       with_items:
         - changedetection_container_labels_traefik_hostname
         - changedetection_container_labels_traefik_path_prefix
