Update validate_config.yml: adopt the common format
Signed-off-by: Suguru Hirahara <acioustick@noreply.codeberg.org>

--- a/tasks/validate_config.yml
+++ b/tasks/validate_config.yml
@@ -16,7 +16,7 @@
 - name: Run if Traefik is enabled
   when: changedetection_container_labels_traefik_enabled | bool
   block:
-    - name: Fail if required changedetection Traefik settings not defined
+    - name: Fail if Traefik settings required for Changedetection.io are not defined
       ansible.builtin.fail:
         msg: >-
           You need to define a required configuration setting (`{{ item }}`).
