--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -216,6 +216,9 @@ changedetection_systemd_wanted_services_list_default: []
 changedetection_systemd_wanted_services_list_auto: []
 changedetection_systemd_wanted_services_list_custom: []
 
+# Specify the timezone
+changedetection_environment_variables_tz: UTC
+
 # List of systemd services that changedetection.service depends on
 changedetection_playwright_driver_systemd_required_services_list: "{{ changedetection_playwright_driver_systemd_required_services_list_default + changedetection_playwright_driver_systemd_required_services_list_auto + changedetection_playwright_driver_systemd_required_services_list_custom }}"
 changedetection_playwright_driver_systemd_required_services_list_default: "{{ [devture_systemd_docker_base_docker_service_name] if devture_systemd_docker_base_docker_service_name else [] }}"
@@ -226,6 +229,9 @@ changedetection_playwright_driver_systemd_wanted_services_list: "{{ changedetect
 changedetection_playwright_driver_systemd_wanted_services_list_default: []
 changedetection_playwright_driver_systemd_wanted_services_list_auto: []
 changedetection_playwright_driver_systemd_wanted_services_list_custom: []
+
+# Specify the timezone
+changedetection_playwright_driver_environment_variables_tz: UTC
 
 # Additional environment variables.
 changedetection_environment_variables_additional_variables: ''
