--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -130,7 +130,9 @@ changedetection_container_labels_traefik_additional_response_headers_custom: {}
 changedetection_container_labels_additional_labels: ''
 
 # A list of extra arguments to pass to the container
-changedetection_container_extra_arguments: []
+changedetection_container_extra_arguments: "{{ changedetection_container_extra_arguments_auto + changedetection_container_extra_arguments_custom }}"
+changedetection_container_extra_arguments_auto: []
+changedetection_container_extra_arguments_custom: []
 
 # Specifies the value of the `X-XSS-Protection` header
 # Stops pages from loading when they detect reflected cross-site scripting (XSS) attacks.
