--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -127,7 +127,9 @@ changedetection_container_labels_traefik_additional_response_headers_custom: {}
 # changedetection_container_labels_additional_labels: |
 #   my.label=1
 #   another.label="here"
-changedetection_container_labels_additional_labels: ''
+changedetection_container_labels_additional_labels: "{{ changedetection_container_labels_additional_labels_auto | combine(changedetection_container_labels_additional_labels_custom) }}"
+changedetection_container_labels_additional_labels_auto: {}
+changedetection_container_labels_additional_labels_custom: {}
 
 # A list of extra arguments to pass to the container
 changedetection_container_extra_arguments: "{{ changedetection_container_extra_arguments_auto + changedetection_container_extra_arguments_custom }}"
