--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -122,9 +122,10 @@ changedetection_container_labels_traefik_additional_response_headers_custom: {}
 
 # changedetection_container_labels_additional_labels contains a multiline string with additional labels to add to the container label file.
 # See `../templates/labels.j2` for details.
+# To add your own custom labels, use `changedetection_container_labels_additional_labels_custom`
 #
 # Example:
-# changedetection_container_labels_additional_labels: |
+# changedetection_container_labels_additional_labels_custom: |
 #   my.label=1
 #   another.label="here"
 changedetection_container_labels_additional_labels: "{{ changedetection_container_labels_additional_labels_auto | combine(changedetection_container_labels_additional_labels_custom) }}"
