--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -132,7 +132,7 @@ changedetection_container_labels_additional_labels: "{{ changedetection_containe
 changedetection_container_labels_additional_labels_auto: {}
 changedetection_container_labels_additional_labels_custom: {}
 
-# A list of extra arguments to pass to the container
+# A list of extra arguments to pass to the container (`docker create` command)
 changedetection_container_extra_arguments: "{{ changedetection_container_extra_arguments_auto + changedetection_container_extra_arguments_custom }}"
 changedetection_container_extra_arguments_auto: []
 changedetection_container_extra_arguments_custom: []
