--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -125,7 +125,7 @@ changedetection_container_labels_traefik_additional_response_headers_custom: {}
 # To add your own custom labels, use `changedetection_container_labels_additional_labels_custom`
 #
 # Example:
-# changedetection_container_labels_additional_labels_custom: |
+# changedetection_container_labels_additional_labels_custom:
 #   - my.label=1
 #   - another.label="here"
 changedetection_container_labels_additional_labels: "{{ changedetection_container_labels_additional_labels_auto + changedetection_container_labels_additional_labels_custom }}"
