--- a/tasks/validate_config.yml
+++ b/tasks/validate_config.yml
@@ -12,6 +12,7 @@
   when: "lookup('ansible.builtin.varnames', ('^' + item.old + '$'), wantlist=True) | length > 0"
   with_items:
     - { "old": "changedetection_data_dir_path", "new": "changedetection_data_path" }
+    - { "old": "changedetection_container_http_bind_port", "new": "changedetection_container_http_host_bind_port" }
     - { "old": "changedetection_http_header_content_permission_policy", "new": "changedetection_http_header_permissions_policy" }
 
 - name: Fail if required Changedetection.io settings not defined
