--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -11,7 +11,6 @@
 # Project source code URL: https://github.com/dgtlmoon/changedetection.io
 
 changedetection_enabled: true
-changedetection_playwright_driver_enabled: false
 
 changedetection_identifier: changedetection
 changedetection_base_path: "/{{ changedetection_identifier }}"
@@ -19,8 +18,6 @@ changedetection_data_path: "{{ changedetection_base_path }}/data"
 
 # renovate: datasource=docker depName=ghcr.io/dgtlmoon/changedetection.io
 changedetection_version: 0.52.4
-
-changedetection_playwright_driver_version: latest
 
 changedetection_uid: ""
 changedetection_gid: ""
@@ -48,13 +45,6 @@ changedetection_container_image_self_build_repo: "https://github.com/dgtlmoon/ch
 changedetection_container_image_self_build_repo_version: "{{ changedetection_version if changedetection_version != 'latest' else 'main' }}"
 changedetection_container_image_self_build_src_files_path: "{{ changedetection_base_path }}/docker-src"
 
-changedetection_playwright_driver_container_image: "{{ changedetection_playwright_driver_container_image_registry_prefix }}browserless/chrome:{{ changedetection_playwright_driver_container_image_tag }}"
-changedetection_playwright_driver_container_image_tag: "{{ changedetection_playwright_driver_version }}"
-changedetection_playwright_driver_container_image_registry_prefix: "{{ changedetection_playwright_driver_container_image_registry_prefix_upstream }}"
-changedetection_playwright_driver_container_image_registry_prefix_upstream: "{{ changedetection_playwright_driver_container_image_registry_prefix_upstream_default }}"
-changedetection_playwright_driver_container_image_registry_prefix_upstream_default: docker.io/
-changedetection_playwright_driver_container_image_force_pull: "{{ changedetection_playwright_driver_container_image.endswith(':latest') }}"
-
 # Controls whether the container exposes its HTTP port (tcp/5000 in the container).
 #
 # Takes an "<ip>:<port>" or "<port>" value (e.g. "127.0.0.1:2586"), or empty string to not expose.
@@ -72,10 +62,6 @@ changedetection_container_http_port: 5000
 changedetection_container_additional_networks: "{{ changedetection_container_additional_networks_auto + changedetection_container_additional_networks_custom }}"
 changedetection_container_additional_networks_auto: []
 changedetection_container_additional_networks_custom: []
-
-changedetection_playwright_driver_container_additional_networks: "{{ changedetection_playwright_driver_container_additional_networks_auto + changedetection_playwright_driver_container_additional_networks_custom }}"
-changedetection_playwright_driver_container_additional_networks_auto: []
-changedetection_playwright_driver_container_additional_networks_custom: []
 
 # A list of additional "volumes" to mount in the container.
 # This list gets populated dynamically at runtime. You can provide a different default value,
@@ -188,10 +174,6 @@ changedetection_floc_optout_enabled: true
 # See: `changedetection_http_header_strict_transport_security`
 changedetection_hsts_preload_enabled: false
 
-changedetection_playwright_driver_identifier: "{{ changedetection_identifier }}-playwright-driver"
-
-changedetection_playwright_driver_url: "{{ 'ws://' + changedetection_playwright_driver_identifier + ':3000/?stealth=1&--disable-web-security=true' if changedetection_playwright_driver_enabled else '' }}"
-
 changedetection_http_proxy: ""
 changedetection_https_proxy: ""
 changedetection_no_proxy: ""
@@ -200,14 +182,6 @@ changedetection_base_url: "{{ changedetection_scheme }}://{{ changedetection_hos
 changedetection_proxy_headers: true
 
 changedetection_hide_referer: false
-
-changedetection_playwright_driver_connection_timeout: 300000
-changedetection_playwright_driver_concurrent_sessions: 10
-changedetection_playwright_driver_refresh_time: 600000
-changedetection_playwright_driver_block_ads: true
-changedetection_playwright_driver_stealth: true
-# Ignore HTTPS errors, like for self-signed certs
-changedetection_playwright_driver_ignore_https_errors: false
 
 # List of systemd services that changedetection.service depends on
 changedetection_systemd_required_services_list: "{{ changedetection_systemd_required_services_list_default + changedetection_systemd_required_services_list_auto + changedetection_systemd_required_services_list_custom }}"
@@ -228,6 +202,31 @@ changedetection_systemd_wanted_services_list_custom: []
 # Specify the timezone
 changedetection_environment_variables_tz: UTC
 
+changedetection_environment_variables_additional_variables: ""
+
+########################################################################
+#                                                                      #
+# playwright                                                           #
+#                                                                      #
+########################################################################
+
+changedetection_playwright_driver_enabled: false
+
+changedetection_playwright_driver_identifier: "{{ changedetection_identifier }}-playwright-driver"
+
+changedetection_playwright_driver_version: latest
+
+changedetection_playwright_driver_container_image: "{{ changedetection_playwright_driver_container_image_registry_prefix }}browserless/chrome:{{ changedetection_playwright_driver_container_image_tag }}"
+changedetection_playwright_driver_container_image_tag: "{{ changedetection_playwright_driver_version }}"
+changedetection_playwright_driver_container_image_registry_prefix: "{{ changedetection_playwright_driver_container_image_registry_prefix_upstream }}"
+changedetection_playwright_driver_container_image_registry_prefix_upstream: "{{ changedetection_playwright_driver_container_image_registry_prefix_upstream_default }}"
+changedetection_playwright_driver_container_image_registry_prefix_upstream_default: docker.io/
+changedetection_playwright_driver_container_image_force_pull: "{{ changedetection_playwright_driver_container_image.endswith(':latest') }}"
+
+changedetection_playwright_driver_container_additional_networks: "{{ changedetection_playwright_driver_container_additional_networks_auto + changedetection_playwright_driver_container_additional_networks_custom }}"
+changedetection_playwright_driver_container_additional_networks_auto: []
+changedetection_playwright_driver_container_additional_networks_custom: []
+
 # List of systemd services that changedetection.service depends on
 changedetection_playwright_driver_systemd_required_services_list: "{{ changedetection_playwright_driver_systemd_required_services_list_default + changedetection_playwright_driver_systemd_required_services_list_auto + changedetection_playwright_driver_systemd_required_services_list_custom }}"
 changedetection_playwright_driver_systemd_required_services_list_default: "{{ [devture_systemd_docker_base_docker_service_name] if devture_systemd_docker_base_docker_service_name else [] }}"
@@ -239,9 +238,24 @@ changedetection_playwright_driver_systemd_wanted_services_list_default: []
 changedetection_playwright_driver_systemd_wanted_services_list_auto: []
 changedetection_playwright_driver_systemd_wanted_services_list_custom: []
 
+changedetection_playwright_driver_url: "{{ 'ws://' + changedetection_playwright_driver_identifier + ':3000/?stealth=1&--disable-web-security=true' if changedetection_playwright_driver_enabled else '' }}"
+
+changedetection_playwright_driver_connection_timeout: 300000
+changedetection_playwright_driver_concurrent_sessions: 10
+changedetection_playwright_driver_refresh_time: 600000
+changedetection_playwright_driver_block_ads: true
+changedetection_playwright_driver_stealth: true
+# Ignore HTTPS errors, like for self-signed certs
+changedetection_playwright_driver_ignore_https_errors: false
+
 # Specify the timezone
 changedetection_playwright_driver_environment_variables_tz: UTC
 
 # Additional environment variables.
-changedetection_environment_variables_additional_variables: ""
 changedetection_playwright_driver_environment_variables_additional_variables: ""
+
+########################################################################
+#                                                                      #
+# /playwright                                                          #
+#                                                                      #
+########################################################################
