--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -232,6 +232,9 @@ changedetection_playwright_driver_container_additional_networks: "{{ changedetec
 changedetection_playwright_driver_container_additional_networks_auto: []
 changedetection_playwright_driver_container_additional_networks_custom: []
 
+# Specify the size of the container's tmpfs volume
+changedetection_playwright_driver_container_tmpfs_tmp_size: 512m
+
 # List of systemd services that the Changedetection.io Playwright driver systemd service depends on
 changedetection_playwright_driver_systemd_required_services_list: "{{ changedetection_playwright_driver_systemd_required_services_list_default + changedetection_playwright_driver_systemd_required_services_list_auto + changedetection_playwright_driver_systemd_required_services_list_custom }}"
 changedetection_playwright_driver_systemd_required_services_list_default: "{{ [devture_systemd_docker_base_docker_service_name] if devture_systemd_docker_base_docker_service_name else [] }}"
