--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -48,7 +48,7 @@ changedetection_container_image_self_build_src_files_path: "{{ changedetection_b
 # The base container network. It will be auto-created by this role if it doesn't exist already.
 changedetection_container_network: "{{ changedetection_identifier }}"
 
-# Controls whether the container exposes its HTTP port (tcp/5000 in the container).
+# Specify how the container publishes its HTTP port (as defined by `changedetection_container_http_port`).
 #
 # Takes an "<ip>:<port>" or "<port>" value (e.g. "127.0.0.1:2586"), or empty string to not expose.
 changedetection_container_http_host_bind_port: ""
